--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/brietsparks/relational-entities-reducer/issues"
   },
-  "homepage": "https://github.com/brietsparks/relational-entities-reducer#readme"
+  "homepage": "https://github.com/brietsparks/relational-entities-reducer#readme",
+  "devDependencies": {
+    "jest": "^24.5.0"
+  }
 }
