--- a/package.json
+++ b/package.json
@@ -1,25 +1,18 @@
 {
-  "name": "relational-entities-reducer",
-  "version": "0.3.0",
+  "name": "rel-ent-red-2a",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "coverage": "jest --coverage",
-    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/brietsparks/relational-entities-reducer.git"
+    "build" : "tsc"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/brietsparks/relational-entities-reducer/issues"
-  },
-  "homepage": "https://github.com/brietsparks/relational-entities-reducer#readme",
   "devDependencies": {
-    "jest": "^24.5.0",
-    "coveralls": "^3.0.3"
+    "@types/jest": "^24.0.15",
+    "jest": "^24.8.0",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.5.2"
   }
 }
