--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "/dist/"
   ],
   "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "test": "jest --watchAll",
     "build": "tsc"
