--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "test": "jest --watchAll",
-    "build": "tsc"
+    "build": "tsc",
+    "coverage": "jest --coverage",
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^24.0.15",
+    "coveralls": "^3.0.4",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.2"
