--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "rel-ent-red-2a",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "relational-entities-reducer",
+  "version": "0.4.0",
+  "description": "Write and read normalized relational state with easy reducers, actions, and selectors",
+  "repository": "https://github.com/brietsparks/relational-entities-reducer",
+  "files": [
+    "/dist/"
+  ],
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "test": "jest --watchAll",
-    "build" : "tsc"
+    "build": "tsc",
+    "coverage": "jest --coverage",
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^24.0.15",
+    "coveralls": "^3.0.4",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.2"
